# sync

./: CMakeExample.txt  CMakeLists.txt
include/: connect.hpp  library.hpp  settings.h
src/: connect.cpp  library.cpp  settings.cpp
test/: main.cpp
